Added button to restart preprocessing
